synaptic (0.57.11) unstable; urgency=low

  * po/ja.po: updated japanese translation (thanks to Daisuke SUZUKI)
  * po/sv.po: updated translation (thanks to Daniel Nylander)
  * UI and string fixes (thanks to Sebastian Heinlein)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jun 2006 11:17:10 +0200

synaptic (0.57.10) unstable; urgency=low

  * fix a bug in the skip-taskbar handling (thanks to seb128)
  * fix the column sorting (closes: #361070)
  * use the urgency hint for the conffile prompt (ubuntu: #21898)
  * better handling of the automatic terminal expanding (ubuntu: #38935)
  * g++-4.1 fixes (thanks to Martin Michlmayr) (closes: #357863)
  * added some documentation for the 'Add downloaded packages' option
    (closes: #365446)

 -- Michael Vogt <mvo@debian.org>  Tue, 9 May 2006 09:50:02 +0200

synaptic (0.57.9) unstable; urgency=low

  * fix more set_transient() problems with run with --parent-window-id
  * fix problem with fetch window not centered on parent (thanks to
    seb128 and glatzor)
  * if no terminal activity is detected and the terminal is expanded
    set the urgency hint as well (ubuntu: #31436)
  * remove http:// when it was entered as part of the proxy uri
  * include reinstall markings in the "changes" filter
  * fix memory corruption problem

 -- Michael Vogt <mvo@debian.org>  Tue, 28 Feb 2006 09:44:42 +0100

synaptic (0.57.8) unstable; urgency=low

  * po/pl.po: updated Polish translation (thanks to Emilian Nowak)
  * po/it.pl: updated Italian translation (thanks to Marco Colombo)
  * po/ko.pl: updated Korean translation (thanks to Changwoo Ryu)
    (closes: #346546)
  * typo fix in debian/NEWS.Debian (closes: #346130)
  * po/zh_HK.po: removed as requested by Anthony Fok (closes: #346081)
  * typo fix in po/fr.po, thanks to  Filipus Klutiero  (closes: #336999)
  * po/gl.po: added Galician translation (thanks to Nacho Resa)
  * po/es.po: updated Spanish translation 
    (thanks to Francisco Javier F. Serrador)