@@ -3,8 +3,10 @@ synaptic (0.57.11) unstable; urgency=low
   * po/ja.po: updated japanese translation (thanks to Daisuke SUZUKI)
   * po/sv.po: updated translation (thanks to Daniel Nylander)
   * UI and string fixes (thanks to Sebastian Heinlein)
+  * show broken packages in the status view as well
+  * don't show a download window if nothing is going to be downloaded
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Jun 2006 11:17:10 +0200
+ -- 
 
 synaptic (0.57.10) unstable; urgency=low
 
